--- a/package.json
+++ b/package.json
@@ -19,6 +19,12 @@
     "@angular/platform-browser": "~10.1.4",
     "@angular/platform-browser-dynamic": "~10.1.4",
     "@angular/router": "~10.1.4",
+    "@types/gsap": "^1.20.2",
+    "angular-particle": "^1.0.4",
+    "bootstrap": "^4.5.2",
+    "gsap": "^3.5.1",
+    "jquery": "^3.5.1",
+    "particles.js": "^2.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
